react/src/components/sidebar/sidebar.css
/* General */
#sidebar{
    font-size: 14px;
    width: 35vw;
    height: 100%;
    padding: 0 1vw;
    background: #f7f7f7;
    margin-right: 1vh;
    overflow-y: auto;
    overflow-x: hidden;
}
#sidebar strong {
    color: #f4a22d;
}
#crash-map-sidebar-header {
    margin: 4% 0;
    font-size: 1.5rem;
}
#crash-map-sidebar-header, .crash-map-sidebar-subheader{
    color: #437b82;
}
#sidebar-hr{
    border: 0;
    border-top: 1px solid #ddd;
    height: 0;
    box-sizing: content-box;
    clear: both;
    margin: 4% 0;
}
.crash-map-sidebar-subheader{
    font-size: 1.2rem;
    margin-top: 8%;
}
#first-subheader{
    margin-top: 0;
}
#crash-map-print-sidebar{
    padding: 0 3%;
    text-decoration: underline;
    cursor: pointer;
    color: #33658A;
}
.polarChart{
    height: 500px;
    width: 500px;
}
.sidebar-paragraphs, #crash-map-sidebar-ul{
    padding: 0 3%;
    margin: 0;
}
.first-paragraph{
    margin: 2% 0;
}
.crash-map-sidebar-totals{
    color: #414770;
}
#crash-map-sidebar-ul{
    list-style-type: none;
}
#crash-map-sidebar-ul li{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 3px 0;
    border-bottom: 1px dotted #414770;
}
#crash-map-sidebar-ul:last-child{
    border-bottom: none;
}


/* Chart Form */
.crash-map-charts-form{
    margin-top: 3%;
}
.crash-map-charts-fieldset{
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #fcfcfc;
    border: 1px solid #f4a22d;
}
.crash-map-fieldset-subgroup{
    width: 80%;
}
.crash-map-first-input{
    margin-right: 3%;
}
#crash-range-button{
    float: right;
    border-radius: 3px;
    border: none;
    padding: 8px;
    margin-top: -4px;
    background: #f4a22d;
    color: #fff;
    cursor: pointer;
}


/* Media Queries */
@media all and (max-width: 800px) {
    #sidebar{
        width: calc(100% - 20px);
        height: 40%;
        padding: 15px 10px;
    }
    #crash-map-sidebar-header{
        margin: 0;
        font-size: 1.2rem;
    }
    .crash-map-sidebar-subheader{
        font-size: 1rem;
    }
    .sidebar-paragraphs{
        font-size: 0.85rem;
    }
}

